--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "email": "hugo.giraudel@n26.com",
     "url": "https://twitter.com/n26"
   },
-  "keywords": ["express", "middleware", "locale", "language", "i18n"],
+  "keywords": [
+    "express",
+    "middleware",
+    "locale",
+    "language",
+    "i18n"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/Papayer-GmbH/express-simple-locale"
