--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "express-simple-locale",
-  "description": "A simple Express middleware to guess the short-locale of a user.",
-  "version": "0.2.0",
+  "description":
+    "A simple Express middleware to guess the short-locale of a user.",
+  "version": "0.2.1",
   "author": {
     "name": "Hugo Giraudel",
     "email": "hugo.giraudel@n26.com",
     "url": "https://twitter.com/n26"
   },
-  "keywords": [
-    "express",
-    "middleware",
-    "locale",
-    "language",
-    "i18n"
-  ],
+  "keywords": ["express", "middleware", "locale", "language", "i18n"],
   "repository": {
     "type": "git",
     "url": "https://github.com/n26/express-simple-locale"
