--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "express-simple-locale",
-  "description":
-    "A simple Express middleware to guess the short-locale of a user.",
+  "description": "A simple Express middleware to guess the short-locale of a user.",
   "version": "0.2.1",
   "author": {
     "name": "Hugo Giraudel",
     "email": "hugo.giraudel@n26.com",
     "url": "https://twitter.com/n26"
   },
-  "keywords": ["express", "middleware", "locale", "language", "i18n"],
+  "keywords": [
+    "express",
+    "middleware",
+    "locale",
+    "language",
+    "i18n"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/n26/express-simple-locale"
@@ -20,9 +25,9 @@
   },
   "main": "src/index.js",
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "jest": "^20.0.4",
-    "standard": "^10.0.2"
+    "babel-eslint": "^8.2.3",
+    "jest": "^22.4.3",
+    "standard": "^11.0.1"
   },
   "dependencies": {
     "lodash.get": "^4.4.2"
